# nixops-plugged

./: .gitignore  README.md  flake.nix  nixops-pluggable.nix  pyproject.toml
